# SLIC-superpixel-with-OpenCV

./: CMakeLists.txt  README.md  demo.cpp  slic.cpp  slic.h  test_slic.cpp
